tests/expected_invalid_parse_import_syntax.diag.out
<input>:1:7: error: expected module path after 'import'
    import;
          ^
<input>:3:1: error: expected ';' after import declaration
    domain module after_imports {
    ^^^^^^
